--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
     <!-- Table Flex Scroll -->
     
     <div class="table-scroll">
+
         <!-- justify-content -->
-        <table>
-            <!-- <thead>
-                Flexbox
-            </thead> -->
+        <table class="flex-justify-content">
             <tr class="cssselector">
                 <th colspan="2">
                     Justify-Content
@@ -36,7 +34,7 @@
                     flex-start
                 </td>
                 <td class="cssproperty">
-                    <div class="flex-line flex-justify__start">
+                    <div class="flex-line start">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -49,7 +47,7 @@
                     flex-end
                 </td>
                 <td class="cssproperty">
-                    <div class="flex-line flex-justify__end">
+                    <div class="flex-line end">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -62,7 +60,7 @@
                    center
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-justify__center">
+                <div class="flex-line center">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -75,7 +73,7 @@
                    space-between
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-justify__spacebetween">
+                <div class="flex-line spacebetween">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -88,7 +86,7 @@
                    space-around
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-justify__spacearound">
+                <div class="flex-line spacearound">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -101,7 +99,7 @@
                    space-evenly
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-justify__spaceevenly">
+                <div class="flex-line spaceevenly">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -110,11 +108,9 @@
                 </td>
             </tr>
         </table>
+
         <!-- align-content -->
         <table class="flex-align-content">
-            <!-- <thead>
-                Flexbox
-            </thead> -->
             <tr class="cssselector">
                 <th colspan="2">
                     Align-Content
@@ -125,7 +121,7 @@
                     flex-start
                 </td>
                 <td class="cssproperty">
-                    <div class="flex-line flex-aligncontent__start">
+                    <div class="flex-line start">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -138,7 +134,7 @@
                     flex-end
                 </td>
                 <td class="cssproperty">
-                    <div class="flex-line flex-aligncontent__end">
+                    <div class="flex-line end">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -151,7 +147,7 @@
                    center
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-aligncontent__center">
+                <div class="flex-line center">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -164,7 +160,7 @@
                    space-between
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-aligncontent__spacebetween">
+                <div class="flex-line spacebetween">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -181,7 +177,11 @@
                    space-around
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-aligncontent__spacearound">
+                <div class="flex-line spacearound">
+                            <div class="square size1"></div>
+                            <div class="square size2"></div>
+                            <div class="square size3"></div>
+                            <div class="square size4"></div>
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -190,13 +190,12 @@
                 </td>
             </tr>
         </table>
-        <table>
-            <!-- <thead>
-                Flexbox
-            </thead> -->
+
+        <!-- align-items -->
+        <table class="flex-align-items">
             <tr class="cssselector">
                 <th colspan="2">
-                    Justify Content
+                    Align-Items
                 </th>
             </tr>
             <tr>
@@ -204,7 +203,7 @@
                     flex-start
                 </td>
                 <td class="cssproperty">
-                    <div class="flex-line flex-justify__start">
+                    <div class="flex-line start">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -217,7 +216,7 @@
                     flex-end
                 </td>
                 <td class="cssproperty">
-                    <div class="flex-line flex-justify__end">
+                    <div class="flex-line end">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -230,7 +229,7 @@
                    center
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-justify__center">
+                <div class="flex-line center">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -240,10 +239,10 @@
             </tr>
             <tr>
                 <td>
-                   space-between
+                   stretch
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-justify__spacebetween">
+                <div class="flex-line stretch">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
@@ -253,23 +252,10 @@
             </tr>
             <tr>
                 <td>
-                   space-around
+                   baseline
                 </td>
                 <td class="cssproperty">
-                <div class="flex-line flex-justify__spacearound">
-                            <div class="square size1"></div>
-                            <div class="square size2"></div>
-                            <div class="square size3"></div>
-                            <div class="square size4"></div>
-                </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                   space-evenly
-                </td>
-                <td class="cssproperty">
-                <div class="flex-line flex-justify__spaceevenly">
+                <div class="flex-line baseline">
                             <div class="square size1"></div>
                             <div class="square size2"></div>
                             <div class="square size3"></div>
