Updated header width and description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="header">
        <h1>Flexbox Alignment</h1>
-       <h3>A <span>cheatsheet</span> for those of us with the memory of an ant who have not been able to memorize it.</h3>
+       <h3>A <span>cheatsheet</span> for those of us with the memory of an ant who have not been able to memorize flex-box properties.</h3>
     </div>
     
     <!-- Table Flex Scroll -->
